--- a/styles/screen.css
+++ b/styles/screen.css
@@ -107,7 +107,12 @@ article, aside, details, div, figcaption, figure, footer, header, hgroup, main, 
 	#shadow { visibility: hidden; position: fixed; left: 0; top: 49px; z-index: 99; width: 100%; height: 100%; background: rgba(1,23,41,.76); opacity: 0; cursor: pointer; }
 	#content { position: relative; z-index: 2; }
 		#content > *:last-child { margin-bottom: 18px; }
-	#footer { position: relative; z-index: 1; padding: 0 0 0 20px; }
+        #footer {
+        position: absolute;
+        z-index: 1;
+        padding: 0 0 0 20px;
+        bottom: 2%;
+        }
 		#footer ul { overflow: hidden; list-style: none; margin-right: -20px; padding: 0; }
 			#footer ul li { position: relative; float: left; margin: 0 16px 0 0; }
 			#footer ul li:before { content: "|"; display: block; position: absolute; left: 100%; top: 0; width: 16px; text-align: center; }
