--- a/styles/wallet.css
+++ b/styles/wallet.css
@@ -28,6 +28,21 @@
 .qrcody{
 
 }
+#export{ display: none}
+.suffix, #sendTransactionBtn,#addChildAddress{ display: none;
+}
+.pcolor{
+    font-size: 12px;
+    color: #8292a5;
+}
+#sendT{
+        width: 150px;
+    height: 32px;
+}
+#childAddresses{
+        text-align: left;
+    color: #22283a;
+}
 .createwalletBtn{
         float: none !important;
     margin: 0 auto;
