--- a/styles/screen.css
+++ b/styles/screen.css
@@ -1,8 +1,8 @@
 /* -------------------------------------------
 
-	Name: 		Vault0x
+	Name: 		Recordskeeper
 	Date:		2017/11/06
-	Author:		http://psdhtml.me
+	Author:		Adarsha Jha
 		   		   
 ---------------------------------------------  */
 * { margin: 0; padding: 0; }
@@ -57,7 +57,7 @@ article, aside, details, div, figcaption, figure, footer, header, hgroup, main, 
 				#nav > ul:first-child > li:before { content: ""; display: block; position: absolute; left: 0; top: 13px; width: 8px; height: 8px; border-radius: 8px; background: #3bdbd2; }
 				#nav > ul:first-child > li > a { padding-left: 16px; }
 				#nav > ul:first-child > li span { margin: 0 0 0 5px; font-size: .75em; }
-		#top > .menu, #heading > .menu { display: block; position: absolute; right: 0; top: -3000em; z-index: 9; width: 49px; height: 49px; color: #a4aaba; font-size: 16px; cursor: pointer; }
+		#top > .menu, #heading > .menu { display: block; position: absolute; right: 0; top: -3000em; z-index: 9; width: 49px; height: 49px; color: #fff; font-size: 16px; cursor: pointer; }
 			#top > .menu:before, #heading > .menu:before { content: "\e926"; }
 	#aside { position: fixed; left: 0; top: 49px; bottom: 0; z-index: 8; width: 56px; border: 0 solid #3a4156; background: #212739; }
 		#aside > ul { list-style: none; margin: 0; padding: 0; }
