--- a/styles/screen.css
+++ b/styles/screen.css
@@ -135,7 +135,7 @@ article, aside, details, div, figcaption, figure, footer, header, hgroup, main, 
 	.cols-a > header:first-child + *, .cols-a > *:first-child { float: left; width: 100%; }
 	.cols-a > header:first-child, .cols-a > aside { float: right; width: 204px; margin: 0 -358px 0 0; }
 
-.double { display: block; position: relative; }
+.double { display: block; position: relative; width: 200px; }
 	.double > * { display: block; position: relative; float: right; clear: none; border-left: 0 solid rgba(0,0,0,0); }
 	.double > *:first-child { float: left; }
 .double.a { margin-left: -17px; }
@@ -429,7 +429,7 @@ table { display: table; width: 100%; border-collapse: collapse; border-spacing: 
 	th { padding-top: 0; padding-bottom: 0; border-width: 0; color: #7f91a3; font-weight: 700; }
 		tr > *:first-child { padding-left: 0; }
 		tr > *:last-child { padding-right: 0; }
-	td a { color: #b6c6d2; }
+	td a { color: #467988; }
 	table .link-btn a { white-space: nowrap; }
 	table i.icon-eye { display: inline-block; position: relative; top: 2px; font-size: 19px; line-height: 1px; }
 
@@ -569,7 +569,7 @@ svg:not(:root) { overflow: hidden; }
 #top { }
 	#logo { left: 20px;  }
 		#root #logo a:before { text-align: left; }	
-	#nav { left: 160px; }
+	/*#nav { left: 160px; }*/
 		#nav > ul > li, #nav > ul > li.a { margin-right: 30px; }
 #heading { }
 	#heading h1, #heading h2, #heading h3, #heading h4, #heading h5, #heading h6 { margin-right: 12px; }
@@ -659,7 +659,7 @@ table { }
 	#root .form-a .double > *:first-child, #root .list-a .double > *:first-child { float: left; }
 	
 #root .desktop-hide, #root .tablet-only { position: relative; left: 0; top: 0; }
-#root .desktop-only, #root .tablet-hide, #nav, #root #heading ul li.text-right a:before { position: absolute; left: -3000em; top: -3000em; bottom: inherit; right: inherit; }
+/*#root .desktop-only, #root .tablet-hide, #nav, #root #heading ul li.text-right a:before { position: absolute; left: -3000em; top: -3000em; bottom: inherit; right: inherit; }*/
 }
 @media only screen and (max-width: 47.5em) { /* 760 */
 #root .quadruple.a > *, .list-inline form, .list-inline form p { float: none; width: auto; }
