--- a/styles/wallet.css
+++ b/styles/wallet.css
@@ -29,7 +29,7 @@
 
 }
 span.xrk.out {
-    background: green;
+    background: #ce5454;
     color: white;
     padding: 5px;
     border-radius: 5px;
@@ -43,12 +43,16 @@ span.xrk.out {
 }
 span.xrk.in {
     background: green;
-    color: white;
+   color: white;
     padding: 5px;
     border-radius: 5px;
-    /* width: 50px; */
+    width: 50px;
     margin-left: 5px;
     font-size: 12px;
+    text-align: right;
+    float: left;
+    text-align: center;
+    margin-right: 10px;
 }
 
 label#modalshowaddr {
