--- a/styles/wallet.css
+++ b/styles/wallet.css
@@ -60,6 +60,16 @@ span.xrk.in {
     margin-right: 10px;
     text-transform: uppercase;
 }
+button.close.errorclose {
+    text-shadow: none;
+    color: white;
+    background: black;
+    opacity: 9;
+    font-size: 16px;
+    padding: 8px;
+    text-transform: lowercase;
+    -webkit-font-smoothing: unset;
+}
 
 label#modalshowaddr {
     color: #3f4453;
