--- a/styles/wallet.css
+++ b/styles/wallet.css
@@ -84,6 +84,9 @@ button.close.errorclose {
 .privatemodalcontainer{
   position: relative;
 }
+.tooltip-arrow,
+.red-tooltip + .tooltip > .tooltip-inner {background-color: #f00;}
+
 label#modalshowaddr {
     color: #3f4453;
     font-size: 13px;
