--- a/styles/wallet.css
+++ b/styles/wallet.css
@@ -22,9 +22,22 @@
     width: 30%;
     float: left;
 }
+button.close.testnetColor {
+    background: none !important;
+}
 /*#hexdata{
   width: 85%;
 }*/
+.testnetColor{
+      background: #339ab9 !important;
+}
+
+.walletpng{
+  width: 50px;
+}
+.walletpngcont{
+  margin-bottom: 0px;
+}
 .qrcody{
 
 }
@@ -805,7 +818,7 @@ if it's not present, don't show loader */
      #nav {
        right: 20px;
     margin-top: 10px;
-    background: #54b2ce;
+    /*background: #54b2ce;*/
     position: initial;
     text-align: right;
     }
@@ -824,7 +837,26 @@ if it's not present, don't show loader */
 
 
 }
+input#authorize{
+  border: none;
+}
 
+.swal2-modal .swal2-styled {
+    border: 0;
+    border-radius: 3px;
+    box-shadow: none;
+    color: #fff;
+    cursor: pointer;
+    font-size: 17px;
+    font-weight: 500;
+    margin: 15px 5px 0;
+    padding: 10px 32px;
+    text-align: center;
+    margin: 0;
+    margin-left: 50;
+    width: 250px;
+    margin: 0 auto !important;
+}
 
 @media only screen and (max-width : 438px){
     
