approx fee logic added

--- a/styles/wallet.css
+++ b/styles/wallet.css
@@ -1,3 +1,10 @@
+.themefee{
+      font-weight: 700;
+    font-size: 12px;
+    color: #3f4452;
+}
+
+
 .walletcont{
      width: 100%;
     float: left;
