--- a/styles/wallet.css
+++ b/styles/wallet.css
@@ -811,8 +811,13 @@ th{
     z-index: 1;
     padding: 0 0 0 20px;
     bottom: -50px;
-    font-size: 12px;
+    font-size: 10px;
     margin-top: 50px;
+}
+.pagination {
+    cursor: pointer;
+    /* font-size: 13px; */
+    margin-top: -16px;
 }
 
 
