--- a/styles/wallet.css
+++ b/styles/wallet.css
@@ -16,7 +16,10 @@
 #modalshowaddress, #modalshowkey {
   display: none;
 }
-
+.qrlabel{
+  font-weight: 600;
+    font-size: 12px;
+}
 
 
 #printWallet {
@@ -30,13 +33,13 @@
 }
 .walletheader{
       
-    padding: 15px;
+    /*padding: 15px;*/
 }
 .walletheader img{
   width: 100%;
 }
 #qrcode {
-  width:160px;
+  /*width:160px;*/
     
 }
 #printwalletcont{
