--- a/styles/style.css
+++ b/styles/style.css
@@ -53,7 +53,7 @@ body{
   
    #printWallet {
     float: right;
-      margin-top: -30px;
+      /*margin-top: -30px;*/
   }
   .walletcontent{
     clear: both;
@@ -72,6 +72,14 @@ body{
     margin: 10px;
     float: left;
       
+  }
+  div#modaladdrcont {
+    border: none;
+    padding: 20px;
+}
+
+  #print{
+    width: 100%;
   }
   #qrcode2 {
     width:40%;
