--- a/styles/wallet.css
+++ b/styles/wallet.css
@@ -41,7 +41,11 @@ p#restoreErrorP {
     color: red;
     display: none;
 }
-
+label {
+    font-size: 14px;
+    margin-bottom: 10px;
+    margin-top: 5px;
+}
 
 textarea {
     margin-bottom: 20px;
