--- a/styles/wallet.css
+++ b/styles/wallet.css
@@ -41,7 +41,7 @@ p#restoreErrorP {
     color: red;
     display: none;
 }
-label {
+.labelrestore {
     font-size: 14px;
     margin-bottom: 10px;
     margin-top: 5px;
