--- a/styles/wallet.css
+++ b/styles/wallet.css
@@ -125,6 +125,9 @@ margin-bottom: 5px;
     font-size: 15px;
     display: none;
 }
+#printimg3{
+  display: none;
+}
 #printWallet{
   float: right;
     margin-top: 0px;
