--- a/styles/wallet.css
+++ b/styles/wallet.css
@@ -407,7 +407,7 @@ span.xrk {
     margin-top: 50px;
     box-shadow: 0 3px 4px rgba(24,59,101,.37);
     text-align: center;
-    margin-bottom: 17%;
+    margin-bottom: 10%;
 }
 
 .ExistingsideDiv, .ExistingPassDiv{
@@ -674,7 +674,7 @@ if it's not present, don't show loader */
     /* visibility: hidden; */
 }
 #logo img{
-      width: 275px;
+      /*width: 275px;*/
     margin-top: 11px;
 }
 
@@ -1005,7 +1005,21 @@ th{
     /* font-size: 13px; */
     margin-top: -16px;
 }
+#footer{
+      bottom: 20px;
+    width: 90%;
+    position: absolute;
+    padding-left: 0px;
+}
 
+#footer ul {
+    overflow: hidden;
+    list-style: none;
+    margin-right: 0px;
+    padding: 0;
+    width: 100%;
+    /* margin: auto; */
+}
 
 }
 
@@ -1351,5 +1365,27 @@ input#authorize{
     top: -17px;
     right: 0;
 }
+
+
+
+
+
+
+html {
+  min-height: 100%;
+  position: relative;
+}
+  body {
+    margin-bottom: $height-footer;
+  }
+  #footer {
+    bottom: 20px;
+    width: 100%;
+    position: absolute;
+    /*height: $height-footer;*/
+    /*background-color: #f5f5f5;*/
+    
+  }
+
 
 
