--- a/styles/screen.css
+++ b/styles/screen.css
@@ -113,7 +113,7 @@ article, aside, details, div, figcaption, figure, footer, header, hgroup, main, 
     font-size: 12px;
     margin-top: 140px;
         }
-		#footer ul { overflow: hidden; list-style: none; margin-right: 0px; padding: 0; width: 84%;
+		#footer ul { overflow: hidden; list-style: none; margin-right: 0px; padding: 0; width: 87%;
     margin: auto; }
 			#footer ul li { position: relative; float: left; margin: 0 16px 0 0; }
 			#footer ul li:before { content: "|"; display: block; position: absolute; left: 100%; top: 0; width: 16px; text-align: center; }
@@ -767,4 +767,18 @@ table { }
 	#root .form-a .double > p + p { margin-top: -5px; }
 	#root .form-a .double > button + button { margin-top: 10px; }
 	.form-a button, #root .form-a .double > button, #root .form-a .double > button:first-child { display: block; float: none; width: 100%; }
+}
+
+
+html {
+  height: 100%;
+}
+body {
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: 1fr auto;
+}
+#footer {
+  grid-row-start: 2;
+  grid-row-end: 3;
 }
