--- a/styles/wallet.css
+++ b/styles/wallet.css
@@ -1369,9 +1369,46 @@ input#authorize{
 }
 
 
+html {
+  height: 100%;
+}
+body {
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: 1fr auto;
+}
+#footer {
+  grid-row-start: 2;
+  grid-row-end: 3;
+}
+
+div#restoremodBody {
+    margin: 10px;
+}
+.col-md-10 input {
+    height: 35px;
+    padding: 0 18px;
+    margin-bottom: 9px;
+}
+
+.pad10{
+      padding: 10px;
+      font-weight: bold;
+}
+
+.fonts12{
+  font-size: 12px;
+}
 
 
-
+.addmoreCont{
+      z-index: 2;
+    width: 20px;
+    margin: auto;
+    font-size: 20px;
+    color: #23293a;
+    cursor: pointer;
+}
 
 
 
