--- a/styles/wallet.css
+++ b/styles/wallet.css
@@ -245,7 +245,7 @@ margin-bottom: 5px;
 .walletheader img{
   width: 100%;
 }
-#qrcode, #qrcode2 {
+#qrcode, #qrcode2, #qrcode6 {
   /*width:160px;*/
     padding-top: 10px;
 }
